kubernetes/apps/storage/garage/webui/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garage-webui
  namespace: storage
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: mdi:chess-rook
    hajimari.io/group: storage
    hajimari.io/appName: Garage
spec:
  hostnames:
    - "garage.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: garage-webui
          port: 3909
